update desain page

--- a/blank_porto.html
+++ b/blank_porto.html
@@ -35,7 +35,7 @@
 
 <body data-spy="scroll" dat a-target="#pb-navbar" data-offset="200" style="background-color: #f0f0f0;">
   <center>
-    <div style="width: 700px" class="bg-light px-5 shadow">
+    <div class="bg-light px-5 shadow col-12 col-md-7">
       <div class="container pt-2">
         <div class="row justify-content-center">
           <div class="col-md-12">
@@ -53,22 +53,29 @@
           </h2>
         </div>
         <div>
-          <p class="text-dark justify-text ">Konteks
-            Dengan meningkatnya permintaan dan persaingan yang ketat di pasar, Superstore Raksasa mencari pengetahuan
-            Anda untuk memahami apa yang terbaik bagi mereka. Mereka ingin memahami produk, wilayah, kategori, dan
-            segmen pelanggan mana yang harus mereka targetkan atau hindari.
+          <p class="text-dark justify-text ">Sebagai seorang Data Analyst, kamu mendapatkan permintaan dari tim manajemen untuk menganalisis performa penjualan produk dalam empat tahun	 terakhir. Tujuan dari analisis ini adalah untuk memahami produk mana yang paling banyak dipesan, tren pemesanan berdasarkan waktu, serta kontribusi setiap produk terhadap total pendapatan. Data yang kamu miliki berisi informasi pemesanan mulai dari. Row ID Order ID, Order Date, Ship Date, Ship Mode, Customer ID, Customer Name, Segment, Country, City, State, Postal Code, Region, Product ID, Category, Sub-Category, Product Name, Sales.</p>
+          <P class="text-dark justify-text ">Permasalahan:
+            Bagaimana tren Penjualan selama 4 tahun terakhir ini, apakah ada peningkatan penjualan di setiap tahunnya?
+            Selama 4 Tahun terkahir, berapa total pendapatan, Jumlah Pesana, serta Jumlah Penjualan Produk?
+            Apakah terdapat pola pemesanan pada priode tertentu yang dapat dijadikan acuan untuk promosi?</P>
+          <P class="text-dark justify-text ">Tujuan Analisis:
+            Mengidentifikasi apakah ada pertumbuhan penjualan serta pendapatan produk di setiap tahunnya, guna utnuk membantu tim manajemen utuk melihat pertumbuhan penjualan.
+            Memberikan rekomendasi waktu promosi berdasarkan pola pemesanan waktu untuk meningkatkan penjualan.
+            Menentukan kontribusi setiap kategori produk untuk mengetahui preferensi konsumen terhadap jenis kategori barang tertentu.
+          </P>
+          <P class="text-dark justify-text ">Analysis Objective
+            Mengidentifikasi produk yang sering dipesan untuk memandu promosi.
+            Menganalisis tren waktu pemesanan untuk memahami perilaku pelanggan.
+            Menghitung kontribusi tiap kategori terhadap pendapatan total.
+          </P>
+          <P class="text-dark justify-text "> Dasboard :<a href="https://drive.google.com/file/d/1uGbDP2KBNa174XovKcf75uLM82vgqkmm/view?usp=sharing">https://drive.google.com/file/d/1uGbDP2KBNa174XovKcf75uLM82vgqkmm/view?usp=sharing</a> </P>
+          <P class="text-dark justify-text ">Data : <a href="https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting">https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting</a></P>
 
-            Anda bahkan dapat mengambil langkah lebih jauh dan mencoba membangun model Regresi untuk memprediksi
-            Penjualan atau Laba.
-
-            Jadilah gila dengan kumpulan data, tetapi pastikan juga untuk memberikan beberapa wawasan bisnis untuk
-            ditingkatkan. </p>
-
-            <img class="mt-5 mb-5" src="images/dashboardanalisisuperstore1.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5" src="images/dashboardanalisisuperstore2.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5" src="images/dashboardanalisisuperstore3.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5" src="images/dashboardanalisisuperstore4.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5" src="images/dashboardanalisisuperstore5.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mt-5 mb-5 img-fluid" src="images/dashboardanalisisuperstore1.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore2.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore3.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore4.jpg" alt="gambar tidak tampil" width="100%" />
+            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore5.jpg" alt="gambar tidak tampil" width="100%" />
         </div>
       </div>
       <p></p>
