--- a/halaman_2.html
+++ b/halaman_2.html
@@ -53,29 +53,42 @@
           </h2>
         </div>
         <div>
-          <p class="text-dark justify-text ">Sebagai seorang Data Analyst, kamu mendapatkan permintaan dari tim manajemen untuk menganalisis performa penjualan produk dalam empat tahun	 terakhir. Tujuan dari analisis ini adalah untuk memahami produk mana yang paling banyak dipesan, tren pemesanan berdasarkan waktu, serta kontribusi setiap produk terhadap total pendapatan. Data yang kamu miliki berisi informasi pemesanan mulai dari. Row ID Order ID, Order Date, Ship Date, Ship Mode, Customer ID, Customer Name, Segment, Country, City, State, Postal Code, Region, Product ID, Category, Sub-Category, Product Name, Sales.</p>
+          <p class="text-dark justify-text ">Sebagai seorang Data Analyst, kamu mendapatkan permintaan dari tim
+            manajemen untuk menganalisis performa penjualan produk dalam empat tahun terakhir. Tujuan dari analisis ini
+            adalah untuk memahami produk mana yang paling banyak dipesan, tren pemesanan berdasarkan waktu, serta
+            kontribusi setiap produk terhadap total pendapatan. Data yang kamu miliki berisi informasi pemesanan mulai
+            dari. Row ID Order ID, Order Date, Ship Date, Ship Mode, Customer ID, Customer Name, Segment, Country, City,
+            State, Postal Code, Region, Product ID, Category, Sub-Category, Product Name, Sales.</p>
           <P class="text-dark justify-text ">Permasalahan:
             Bagaimana tren Penjualan selama 4 tahun terakhir ini, apakah ada peningkatan penjualan di setiap tahunnya?
             Selama 4 Tahun terkahir, berapa total pendapatan, Jumlah Pesana, serta Jumlah Penjualan Produk?
             Apakah terdapat pola pemesanan pada priode tertentu yang dapat dijadikan acuan untuk promosi?</P>
           <P class="text-dark justify-text ">Tujuan Analisis:
-            Mengidentifikasi apakah ada pertumbuhan penjualan serta pendapatan produk di setiap tahunnya, guna utnuk membantu tim manajemen utuk melihat pertumbuhan penjualan.
+            Mengidentifikasi apakah ada pertumbuhan penjualan serta pendapatan produk di setiap tahunnya, guna utnuk
+            membantu tim manajemen utuk melihat pertumbuhan penjualan.
             Memberikan rekomendasi waktu promosi berdasarkan pola pemesanan waktu untuk meningkatkan penjualan.
-            Menentukan kontribusi setiap kategori produk untuk mengetahui preferensi konsumen terhadap jenis kategori barang tertentu.
+            Menentukan kontribusi setiap kategori produk untuk mengetahui preferensi konsumen terhadap jenis kategori
+            barang tertentu.
           </P>
-          <P class="text-dark justify-text ">Analysis Objective
+          <P class="text-dark justify-text ">Analysis Objective :
             Mengidentifikasi produk yang sering dipesan untuk memandu promosi.
             Menganalisis tren waktu pemesanan untuk memahami perilaku pelanggan.
             Menghitung kontribusi tiap kategori terhadap pendapatan total.
           </P>
-          <P class="text-dark justify-text "> Dasboard :<a href="https://drive.google.com/file/d/1uGbDP2KBNa174XovKcf75uLM82vgqkmm/view?usp=sharing">https://drive.google.com/file/d/1uGbDP2KBNa174XovKcf75uLM82vgqkmm/view?usp=sharing</a> </P>
-          <P class="text-dark justify-text ">Data : <a href="https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting">https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting</a></P>
+          <P class="text-dark justify-text ">Data : <a class="text-muted"
+              href="https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting">https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting</a>
+          </P>
 
-            <img class="mt-5 mb-5 img-fluid" src="images/dashboardanalisisuperstore1.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore2.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore3.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore4.jpg" alt="gambar tidak tampil" width="100%" />
-            <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore5.jpg" alt="gambar tidak tampil" width="100%" />
+          <img class="mt-5 mb-5 img-fluid" src="images/dashboardanalisisuperstore1.jpg" alt="gambar tidak tampil"
+            width="100%" />
+          <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore2.jpg" alt="gambar tidak tampil"
+            width="100%" />
+          <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore3.jpg" alt="gambar tidak tampil"
+            width="100%" />
+          <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore4.jpg" alt="gambar tidak tampil"
+            width="100%" />
+          <img class="mb-5 img-fluid" src="images/dashboardanalisisuperstore5.jpg" alt="gambar tidak tampil"
+            width="100%" />
         </div>
       </div>
       <p></p>
