--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 	</section> <!-- section -->
 
 
-
 	<section class="site-section" id="section-about">
 		<div class="container">
 			<div class="row mb-5 align-items-center">
@@ -116,7 +115,7 @@
 								</div>
 								<div class="col-md-8">
 									<div class="card-body">
-										<h3 class="text-dark" style="font-weight: bold;"><a href="blank_porto.html"
+										<h3 class="text-dark" style="font-weight: bold;"><a href="halaman_1.html"
 												class="text-dark" style="font-weight: bold;">
 												Analisis Superstore Sales
 											</a></h3>
@@ -133,7 +132,6 @@
 				</div>
 			</div>
 
-
 			<div class="container">
 				<div class="row">
 					<div class="col-12 text-dark">
@@ -144,15 +142,17 @@
 										<div class="overlay overlay-bg"></div>
 										<img class="image img-fluid" src="images/gabar_superstore.jpg" alt="">
 									</div>
-									<!-- <img src="..." class="img-fluid rounded-start" alt="..."> -->
 								</div>
 								<div class="col-md-8">
 									<div class="card-body">
-										<h3 class="text-dark" style="font-weight: bold;">Card title</h3>
-										<p class="card-text">This is a wider card with supporting text below as a
-											natural lead-in to additional content. This content is a little bit longer.
+										<h3 class="text-dark" style="font-weight: bold;"><a href="halaman_2.html"
+												class="text-dark" style="font-weight: bold;">
+												Analisis Sentiment
+											</a></h3>
+										<p class="card-text">
+											Data ini adalah kumpulan data retail superstore selama 4 tahun
 										</p>
-										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
+										<p class="card-text"><small class="text-muted">Tanggal Publikasi : 09 Desember 2024</small>
 										</p>
 									</div>
 								</div>
@@ -161,7 +161,6 @@
 					</div>
 				</div>
 			</div>
-
 
 			<section class="site-section" id="section-myskills">-
 				<div class="container">
