--- a/halaman_1.html
+++ b/halaman_1.html
@@ -77,7 +77,7 @@
               Menganalisis tren waktu pemesanan untuk memahami perilaku pelanggan.
               Menghitung kontribusi tiap kategori terhadap pendapatan total.
             </p>
-            <p class="text-dark justify-text ">Data : <a class="text-muted"
+            <p class="text-dark justify-text  ">Data : <a class="text-muted" style="word-break: break-all;"
                 href="https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting">https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting</a>
             </p>
 
