--- a/halaman_1.html
+++ b/halaman_1.html
@@ -28,9 +28,9 @@
   </style>
   <style>
     .justify-text {
-      text-align: left;
+      text-align: justify;
     }
-
+    /* *{border: 2px red solid;} */
   </style>
 </head>
 
@@ -38,14 +38,14 @@
   <center>
     <div class="container">
       <div class="bg-light px-5 shadow col-12 col-md-7">
-          <div class="row justify-content-center">
-            <div class="col-md-12">
-              <div class="profile-card d-flex" style="display: flex; align-items: center">
-                <img src="images/image_1.jpg" alt="Profile Picture" class="profile-img" style="margin-right: 10px" />
-                <div class="text-dark" font-size: 16px">Wahyu Wahid</div>
-              </div>
+        <div class="row justify-content-center">
+          <div class="col-md-12">
+            <div class="profile-card d-flex" style="display: flex; align-items: center">
+              <img src="images/image_1.jpg" alt="Profile Picture" class="profile-img" style="margin-right: 10px" />
+              <div class="text-dark" font-size: 16px">Wahyu Wahid</div>
             </div>
           </div>
+        </div>
         <p></p>
         <div class="row">
           <div class="section-heading text-center col-md-12">
@@ -53,14 +53,12 @@
             </h2>
           </div>
           <div class="container">
-            <p class="text-dark justify-text ">Sebagai seorang Data Analyst, kamu mendapatkan permintaan dari tim
+            <p class="text-dark justify-text">Sebagai seorang Data Analyst, kamu mendapatkan permintaan dari tim
               manajemen untuk menganalisis performa penjualan produk dalam empat tahun terakhir. Tujuan dari analisis
-              ini
-              adalah untuk memahami produk mana yang paling banyak dipesan, tren pemesanan berdasarkan waktu, serta
+              ini adalah untuk memahami produk mana yang paling banyak dipesan, tren pemesanan berdasarkan waktu, serta
               kontribusi setiap produk terhadap total pendapatan. Data yang kamu miliki berisi informasi pemesanan mulai
               dari. Row ID Order ID, Order Date, Ship Date, Ship Mode, Customer ID, Customer Name, Segment, Country,
-              City,
-              State, Postal Code, Region, Product ID, Category, Sub-Category, Product Name, Sales.</p>
+              City, State, Postal Code, Region, Product ID, Category, Sub-Category, Product Name, Sales.</p>
             <p class="text-dark justify-text ">Permasalahan:
               Bagaimana tren Penjualan selama 4 tahun terakhir ini, apakah ada peningkatan penjualan di setiap tahunnya?
               Selama 4 Tahun terkahir, berapa total pendapatan, Jumlah Pesana, serta Jumlah Penjualan Produk?
@@ -77,8 +75,8 @@
               Menganalisis tren waktu pemesanan untuk memahami perilaku pelanggan.
               Menghitung kontribusi tiap kategori terhadap pendapatan total.
             </p>
-            <p class="text-dark justify-text  ">Data : <a class="text-muted" style="word-break: break-all;"
-                href="https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting">https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting</a>
+            <p class="text-dark justify-text">Data : <a class="text-muted " style="word-break: break-all; font-weight: bold; font-style: italic;"
+                href="https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting"> https://www.kaggle.com/datasets/rohitsahoo/sales-forecasting</a>
             </p>
 
             <img class="mt-5 mb-5 img-fluid" src="images/dashboardanalisisuperstore1.jpg" alt="gambar tidak tampil"
