--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
 									<div class="card-body">
 										<h3 class="text-dark" style="font-weight: bold;"><a href="halaman_2.html"
 												class="text-dark" style="font-weight: bold;">
-												Analisis Sentiment
+												ANALISIS SENTIMENT  INTENSIF MOBIL LISTRIK INDONESIA
 											</a></h3>
 										<p class="card-text">
-											Data ini adalah kumpulan data retail superstore selama 4 tahun
+											Data ini adalah kumpulan data komentar masyarakat terhadap pemberlakuan mobil listrik di indonesia
 										</p>
-										<p class="card-text"><small class="text-muted">Tanggal Publikasi : 09 Desember 2024</small>
+										<p class="card-text"><small class="text-muted">Tanggal Publikasi : 2 Agustus 2024</small>
 										</p>
 									</div>
 								</div>
