--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<div class="col-md-4">
 									<div class="thumb">
 										<div class="overlay overlay-bg"></div>
-										<img class="image img-fluid" src="images/gabar_superstore.jpg" alt="">
+										<img class="image img-fluid" src="images/mobilsentiment.jpg" alt="">
 									</div>
 								</div>
 								<div class="col-md-8">
