--- a/halaman_2.html
+++ b/halaman_2.html
@@ -60,7 +60,7 @@
             <p class=" mb-5 text-dark justify-text">Data : <a class="text-muted "
                 style="word-break: break-all; font-weight: bold; font-style: italic;"
                 href="https://www.kaggle.com/datasets/billycemerson/analisis-sentimen-terkait-intensif-mobil-listrik">
-                https://www.kaggle.com/datasets/billycemerson/analisis-sentimen-terkait-intensif-mobil-listrik</a>
+                Download Data</a>
             </p>
 
             <p class="text-dark justify-text" style="font-weight: 700; font-size: x-large;">WORLD CLOUD</p>
