--- a/index.html
+++ b/index.html
@@ -162,6 +162,37 @@
 				</div>
 			</div>
 
+			<div class="container">
+				<div class="row">
+					<div class="col-12 text-dark">
+						<div class="card mb-3 shadow - lg rounded">
+							<div class="row g-0">
+								<div class="col-md-4">
+									<div class="thumb">
+										<div class="overlay overlay-bg"></div>
+										<img class="image img-fluid" src="images/gambarwarmindo.jpg" alt="">
+									</div>
+								</div>
+								<div class="col-md-8">
+									<div class="card-body">
+										<h3 class="text-dark" style="font-weight: bold;"><a href="halaman_3.html"
+												class="text-dark" style="font-weight: bold;">
+												ANALISIS WARMINDO
+											</a></h3>
+										<p class="card-text">
+											Data ini adalah kumpulan data warung indomie selama priode  
+										</p>
+										<p class="card-text"><small class="text-muted">Tanggal Publikasi : 2 Agustus 2024</small>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 			<section class="site-section" id="section-myskills">-
 				<div class="container">
 					<div class="row g3">
