--- a/halaman_3.html
+++ b/halaman_3.html
@@ -64,7 +64,7 @@
             </p>
             <p class=" mb-5 text-dark justify-text">Dashboard : <a class="text-muted "
                 style="word-break: break-all; font-weight: bold; font-style: italic;"
-                href="https://docs.google.com/spreadsheets/d/1DMhtoIyZ1PTl3mtUG8MT2wzxCO7wb6RK/edit?usp=sharing&ouid=104807928707734210091&rtpof=true&sd=true">
+                href="https://lookerstudio.google.com/reporting/f263ef73-809c-468d-a7b2-663156d02ed9">
                 Look At The Dashboard</a>
             </p>
 
