--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									<div class="card-body">
 										<h3 class="text-dark" style="font-weight: bold;"><a href="halaman_1.html"
 												class="text-dark" style="font-weight: bold;">
-												Analisis Superstore Sales
+												ANALISIS SUPERSTORE SALES
 											</a></h3>
 										<p class="card-text">
 											Data ini adalah kumpulan data retail superstore selama 4 tahun
